# inventory-optimizer

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  IMPACT.md  LICENSE  MANIFEST.in  Makefile  README.md  coverage.xml  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml
data/: generate_data.py  synthetic_demand.csv
docs/: index.md  installation.md  publishing.md
examples/: basic_usage.py  generate_figures.py  optimization_comparison.py  with_custom_data.py
notebooks/: 01_introduction.ipynb  02_classic_newsboy.ipynb  03_robust_comparison.ipynb  04_real_world_case.ipynb
src/inventory_optimizer/: __init__.py  newsboy.py  robust_newsboy.py  simulation.py  utils.py  validation.py
tests/: test_newsboy.py  test_robust.py  test_simulation.py  test_utils.py  test_validation.py
