[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inventory-optimizer"
version = "0.1.0"
description = "Inventory optimization under uncertain demand (classic and robust Newsboy)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "emilianob-ux"}]
dependencies = [
  "numpy>=1.24,<3",
  "pandas>=2.0,<3",
  "scipy>=1.10,<2",
  "matplotlib>=3.7,<4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-cov>=5,<6",
  "ruff>=0.9,<1",
  "pre-commit>=4,<5",
  "mkdocs>=1.6,<2",
  "mkdocs-material>=9,<10",
  "jupyter>=1,<2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
